perf: publish processor context at mutation boundary